# pybind_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Where_I_figured_out_solution_1.html  main.cpp  test.py
Where_I_figured_out_solution_1_files/: 27548113  27548113(1)  6480303(1)  740480  8306517(1)  86173616  86173616(1)  87894114  87894114(1)  issues-d11b7bdac3b1.js.download  wp-runtime-258a5ef03d37.js.download
tld_module/: __init__.py  test_module.cp311-win_amd64.pyd  test_module.pyi
